--- a/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
@@ -140,6 +140,10 @@
                                                     <a href="~/BillRequisition/BillRequisitionMasterSlave?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BillRequisitionMasterId" title="Details"><i class="glyphicon glyphicon-new-window"></i></a>
 
                                                 }
+                                                
+                                                <a class="btn btn-sm btn-xs btn-warning" style="width:100%" target="_blank"href="~/Report/TCLBillRequisiontReport?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BillRequisitionMasterId">
+                                                    <i class="fa fa-print"></i>Print
+                                                </a>
                                             </td>
                                             <td style="text-align:center">
                                                 @if (item.StatusId == EnumBillRequisitionStatus.Draft)
