--- a/KGERP/Views/Vouchers/RequisitionVoucherApprovalList.cshtml
+++ b/KGERP/Views/Vouchers/RequisitionVoucherApprovalList.cshtml
@@ -118,7 +118,7 @@
                                                 <th>
                                                     Narration
                                                 </th>
-                                                <th style="width:70px;">Report</th>
+                                                <th style="width:70px;">Action</th>
                                             </tr>
                                         </thead>
                                         @{int sl = 0;
